Add progress bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <header>
     <h1>Roadmap Cientista de Dados</h1>
     <p class="subtitle">Pronta para iniciar sua jornada de estudos?</p>
+    <div id="progress-container">
+      <div id="progress-bar"><span id="progress-text">0%</span></div>
+    </div>
     <nav>
       <ul class="menu">
         <li><a href="#bloco1">Matemática & Estatística</a></li>
@@ -193,5 +196,6 @@
     <p>Me siga nas redes sociais <strong>@pythonicah</strong></p>
     <p>&copy; 2025</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
