--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div id="progress-bar"><span id="progress-text">0%</span></div>
 </div>
     <div id="auth">
+      <p class="login-info">faça login para salvar seu progresso</p>
       <form id="login-form">
         <input type="email" id="login-email" placeholder="Email" required>
         <input type="password" id="login-password" placeholder="Senha" required>
