Refine login form aesthetics

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <input type="password" id="login-password" placeholder="Senha" required>
         <button type="submit">Entrar</button>
       </form>
-      <button id="logout-btn" style="display:none;">Sair</button>
+      <button id="logout-btn">Sair</button>
     </div>
     <nav>
       <ul class="menu">
