Refatora codigo e melhora UX

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <div id="progress-bar"><span id="progress-text">0%</span></div>
 </div>
     <div id="auth">
-      <p class="login-info">faça login para salvar seu progresso</p>
+      <p id="auth-message" class="login-info">faça login para salvar seu progresso</p>
+      <p id="user-email" class="login-info" style="display:none;"></p>
 
       <form id="login-form">
         <input type="email" id="login-email" placeholder="Email" required>
